--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="main">
         <div class="main__text-wrapper">
-            <h1 class="main__title">Transitions & Animations</h1>
+            <h1 class="main__title">My Example with Animation and Transitions</h1>
             <h2>Combined with SVGs</h2>
             <svg xmlns="http://www.w3.org/2000/svg" class="dotted-circle" width="352" height="352" overflow="visible">
                 <circle cx="176" cy="176" r="174" fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10"
